# iop_gui

./: .travis.yml
fkie_iop_mapviz_plugins/: CMakeLists.txt  package.xml  plugin.xml
fkie_iop_mapviz_plugins/include/fkie_iop_mapviz_plugins/: access_control_client.h  access_control_dialog.h  access_control_plugin.h  access_control_robot.h  access_control_settings.h  digital_resource_cam.h  digital_resource_plugin.h  illuminator_button.h  illuminator_plugin.h  plan_local_route_plugin.h
fkie_iop_mapviz_plugins/src/: access_control_client.cpp  access_control_dialog.cpp  access_control_plugin.cpp  access_control_robot.cpp  access_control_settings.cpp  digital_resource_cam.cpp  digital_resource_plugin.cpp  illuminator_button.cpp  illuminator_plugin.cpp  plan_local_route_plugin.cpp
fkie_iop_mapviz_plugins/ui/: access_control_config.ui  access_control_dialog.ui  access_control_robot.ui  access_control_system_info.ui  access_control_warning_info.ui  digital_resource_config.ui  illuminator_config.ui  plan_local_route_config.ui
fkie_iop_rqt_access_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
fkie_iop_rqt_access_control/launch/: iop_rqt_access_control.launch
fkie_iop_rqt_access_control/scripts/: iop_rqt_access_control
fkie_iop_rqt_access_control/src/fkie_iop_rqt_access_control/: address.py  client.py  handoff_dialog.py  handoff_request_widget.py  iop_rqt_access_control.py  iop_rqt_access_control_config.ui  main.py  robot.py  robot.ui  settings.py  topic_info.py
fkie_iop_rqt_digital_resource_viewer/: CMakeLists.txt  package.xml  plugin.xml  setup.py
fkie_iop_rqt_digital_resource_viewer/launch/: fkie_iop_rqt_digital_resource_viewer.launch
fkie_iop_rqt_digital_resource_viewer/scripts/: iop_rqt_digital_resource_viewer
fkie_iop_rqt_digital_resource_viewer/src/fkie_iop_rqt_digital_resource_viewer/: cam.py  iop_rqt_digital_resource_viewer.py  iop_rqt_digital_resource_viewer.ui  main.py
fkie_iop_rqt_velocity/: CMakeLists.txt  package.xml  plugin.xml
fkie_iop_rqt_velocity/launch/: fkie_iop_rqt_velocity.launch
fkie_iop_rqt_velocity/scripts/: iop_rqt_velocity
fkie_iop_rqt_velocity/src/fkie_iop_rqt_velocity/: iop_rqt_velocity.py  iop_rqt_velocity_joint_group.ui
iop_rqt_access_control_fkie/: CMakeLists.txt  package.xml  plugin.xml
iop_rqt_access_control_fkie/launch/: iop_rqt_access_control.launch
iop_rqt_access_control_fkie/scripts/: iop_rqt_access_control
iop_rqt_access_control_fkie/src/iop_rqt_access_control_fkie/: address.py  client.py  handoff_dialog.py  handoff_dialog.ui  handoff_request.ui  handoff_request_widget.py  iop_rqt_access_control.py  iop_rqt_access_control.ui  iop_rqt_access_control_config.ui  robot.py  robot.ui  robots.py  settings.py  system_info.ui  topic_info.py  warning_info.ui
iop_rqt_digital_resource_viewer_fkie/: CMakeLists.txt  package.xml  plugin.xml
iop_rqt_digital_resource_viewer_fkie/launch/: iop_rqt_digital_resource_viewer_fkie.launch
iop_rqt_digital_resource_viewer_fkie/scripts/: iop_rqt_digital_resource_viewer
iop_rqt_digital_resource_viewer_fkie/src/iop_rqt_digital_resource_viewer_fkie/: cam.py  cams.py  iop_rqt_digital_resource_viewer.py  iop_rqt_digital_resource_viewer.ui  iop_rqt_digital_resource_viewer_config.ui  topic_info.py
iop_rqt_velocity_fkie/: CMakeLists.txt  package.xml  plugin.xml
iop_rqt_velocity_fkie/launch/: iop_rqt_velocity_fkie.launch
iop_rqt_velocity_fkie/scripts/: iop_rqt_velocity
iop_rqt_velocity_fkie/src/iop_rqt_velocity_fkie/: iop_rqt_velocity.py  iop_rqt_velocity_config.ui  iop_rqt_velocity_joint.ui  topic_info.py
