<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_rqt_access_control</name>
  <version>1.0.0</version>
  <description>GUI plugin to get access control for an IOP compliant robot.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>

  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_gui</url>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>fkie_iop_msgs</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
