<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_rqt_digital_resource_viewer</name>
  <version>1.0.0</version>
  <description>Shows the RTSP stream discovered for IOP complient robot.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/fkie/iop_gui</url>

  <depend>ament_index_python</depend>
  <depend>fkie_iop_msgs</depend>
  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>python_qt_binding</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
