<?xml version="1.0"?>
<package>
  <name>fkie_iop_rqt_velocity</name>
  <version>1.0.0</version>
  <description>The fkie_iop_rqt_velocity package</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>

  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_gui</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python_qt_binding</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>python_qt_binding</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
