<?xml version="1.0"?>
<package>
  <name>iop_rqt_digital_resource_viewer_fkie</name>
  <version>1.0.0</version>
  <description>Shows the RTSP stream discovered for IOP complient robot.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/fkie/iop_gui</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python_qt_binding</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>iop_msgs_fkie</build_depend>
  <build_depend>iop_ocu_controllib_fkie</build_depend>

  <run_depend>python_qt_binding</run_depend>
  <run_depend>iop_msgs_fkie</run_depend>
  <run_depend>iop_ocu_controllib_fkie</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>

  <!-- Depend on
  phonon-backend-vlc
  python-qt4-phonon
  or
  python-pyside.phonon
   -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
